fix(laravel): missing margin swagger ui

--- a/src/Laravel/public/style.css
+++ b/src/Laravel/public/style.css
@@ -117,7 +117,7 @@ header #logo img {
   50% {
     opacity: 1;
     transform: scale(1);
-  } 
+  }
   100% {
     opacity: 0;
     transform: scale(1);
@@ -145,6 +145,9 @@ header #logo img {
 }
 
 /** INCREASE WRAPPER BLOCK PADDING **/
+#swagger-ui.api-platform .swagger-ui {
+    margin-top: 74px;
+}
 
 #swagger-ui.api-platform .wrapper {
   padding: 0 60px;
